# sql-altair-streamlit

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.in  requirements.txt
app/: app.py  database.py  visualization.py
