[tool.poetry]
name = "app"
version = "0.1.0"
description = "A Streamlit app for visualization well locations"
authors = ["Don Fox <don@fox>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
altair = "4.2.2"
pandas = "1.5.1"
streamlit = "1.22.0"
sqlalchemy = "2.0.19"
vega-datasets = "0.9.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
